--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This project is a source of truth for all the code screenshot we use. We store only the code and generate the screenshot whenever we need it using predefined configurations.",
   "main": "index.js",
   "scripts": {
-    "carbon-ts": "npx carbon-now-cli --config ./local-config.json -- "
+    "carbon-cli": "npx carbon-now-cli --config ./local-config.json --save-to ./output --engine firefox -- "
   },
   "author": "",
   "license": "ISC",
